# rareskills-solana-tutorial

./: README.md
day_1/: Anchor.toml  README.md
day_1/tests/: day_1.ts
day_10/: Anchor.toml  README.md
day_10/tests/: day_10.ts
day_11/: Anchor.toml  README.md
day_11/programs/day_11/: Cargo.toml
day_11/tests/: day_11.ts
day_12/: Anchor.toml
day_12/tests/: day_12.ts
day_13/: Anchor.toml  README.md
day_13/scripts/: index.ts
day_13/tests/: day_13.ts
day_14/: Anchor.toml  README.md
day_14/tests/: day_14.ts
day_15/: Anchor.toml  README.md
day_15/tests/: day_15.ts
day_16/: Anchor.toml  README.md
day_16/tests/: day_16.ts
day_17/: Anchor.toml  README.md
day_17/tests/: day_17.ts
day_18/: README.md
day_18/storage_bool/: Anchor.toml
day_18/storage_int/: Anchor.toml
day_19/: Anchor.toml  README.md
day_19/tests/: day_19.ts
day_2/: Anchor.toml  README.md  package-lock.json
day_2/tests/: day_2.ts
day_20/: Anchor.toml  README.md
day_20/tests/: day_20.ts
day_21/: Anchor.toml  README.md
day_21/tests/: day_21.ts
day_23/: Anchor.toml  README.md
day_23/tests/: day_23.ts
day_24/: Anchor.toml
day_24/tests/: day_24.ts
day_3/: Anchor.toml  README.md
day_3/tests/: day_3.ts
day_4/: Anchor.toml  README.md
day_4/tests/: day_4.ts
day_5/: Anchor.toml  README.md
day_5/tests/: day_5.ts
day_6/: Anchor.toml  README.md
day_6/tests/: day_6.ts
day_8/: Anchor.toml  README.md
day_8/tests/: day_8.ts
day_9/: Anchor.toml  README.md
day_9/programs/day_9/: Cargo.toml
day_9/programs/day_9/src/: lib.rs
day_9/tests/: day_9.ts
(+27 files in other folders)
